<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, JustForYangWeiBoActivity!</string>
    <string name="app_name">JustForYangWeiBo</string>

        <string name="attention">注意</string>
    <string name="delete_all">是否要删除这条微博？</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
   
  
    <string name="send">发送</string>
    <string name="close">关闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="del_pic">是否删除图片？</string>
    <string name="Into_the_authorized_page_hints">进入授权页面提示!</string>
    <string name="Are_authorized_for_information">正在获取授权信息...</string>
    <string name="succeed_get_authorized_for_information">成功获取授权信息!</string>
    <string name="Are_fetching_user_information">正在获取用户信息...</string>
    <string name="Are_save_OAuth__information">正在保存授权信息...</string>
    <string name="are_updata_user_info_from_db">正在数据库中更新用户信息...</string>
    <string name="are_save_user_info_to_db">正在往数据库中插入并保存用户信息...</string>

    <string name="confirm_txt">现在登陆微博</string>
    <string name="cancel_txt">返回登陆窗口</string>
    
    <string name="rd_home" >主页</string>
    <string name="rd_at" >提及</string>
    <string name="rd_msg" >消息</string>
    <string name="rd_more" >更多</string>
    <string name="simple_weibo">在体育场遇到这哥们正在用地道的临沂版英语和这位来自爱尔兰的帅哥交流，其间不断听到“这个”“那个”“诗歌”“二锅头”“I like girl”太逗了…</string>
    <string name="time">Time</string>
    <string name="city">city</string>
    <string name="transmit">转发</string>
    <string name="comment">评论</string>
    <string name="favorite">收藏</string>
</resources>