<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" 
    android:descendantFocusability= "blocksDescendants">

    <!-- 左框架 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

		<!-- 关注用户或当前登录用户头像 -->

        <ImageButton
            android:id="@+id/new_weibo_listview_item_user_icon_img"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:src="@drawable/icon48x48"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

        <!-- 右框架 -->
      <LinearLayout 
            android:layout_width="fill_parent"
   			android:layout_height="fill_parent"
    		android:orientation="vertical"
    		>
	      	<!-- 右框架的第一行   用户名称、新浪认证 . 时间部分 -->	
          <LinearLayout 
              android:layout_width="wrap_content"
   			  android:layout_height="wrap_content"
    		  android:orientation="horizontal"
              >
              <!-- 关注用户或当前登录用户的名称 -->
              <TextView 
                  android:id="@+id/new_weibo_listview_item_user_name_txt"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="1dp"
                  android:textColor="#0000FF"
                  android:text="@string/app_name"/>
              <!-- 是否有新浪认证  缺省是隐藏的-->
              <ImageView 
                  android:id="@+id/new_weibo_listview_item_v_img"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="1dp"
                  android:src="@drawable/v"
                  android:contentDescription="@string/app_name"
                  android:visibility="gone"
                  />
              <RelativeLayout
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="10dp"
                  android:gravity="right" >
                  <!--关注用户或当前登录用户的微博发表时间   -->
	              <TextView 
	                  android:id="@+id/new_weibo_listview_item_created_at_txt"
	                  android:layout_width="wrap_content"
	                  android:layout_height="wrap_content"
	                  android:layout_margin="1dp"
	                  android:text="@string/time"
	                  android:layout_alignParentRight="true"/>
              </RelativeLayout>
          </LinearLayout>
          <!-- 右框架的第二行   发表的微博内容与图片 -->	
		  <LinearLayout 
		      android:layout_width="fill_parent"
   			  android:layout_height="wrap_content"
   			  android:orientation="vertical"
   			  android:layout_marginLeft="5dp"
   			  android:layout_marginBottom="5dp"
   			  android:layout_marginRight="10dp">
              <!--关注用户或当前登录用户的微博发表内容   -->
              <TextView 
                  android:id="@+id/new_weibo_listview_item_text_txt"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/simple_weibo"
                  android:drawableRight="@drawable/redirect_icon"/>
              
		  </LinearLayout>
		  
		 
    </LinearLayout>
</LinearLayout>